--- a/src/jade/blocks/about-us.jade
+++ b/src/jade/blocks/about-us.jade
@@ -1,6 +1,10 @@
 .about-us
-  h2.about-us__title  O nas
-  p.about-us__text  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie egestas massa, et sollicitudin urna mattis faucibus. Praesent sagittis laoreet est, et efficitur enim lacinia id. Aenean imperdiet diam nec efficitur commodo. Morbi at purus tempus tellus tempus placerat. Sed faucibus sed elit at lacinia. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent posuere orci justo, eu fermentum quam cursus quis. Proin consequat molestie magna accumsan placerat. Nulla quis consectetur tortor. Nam viverra consectetur risus iaculis ultrices.
-  a(class="about-us__phone" href="#") Tel.500 110 110
-  a(class="about-us__btn  btn" href="#") Historia Naszej firmy
-  img(class="about-us__img" src="img/about-us.jpg")
+  .col-lg-5
+    h2.about-us__title  O nas
+    p.about-us__text  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie egestas massa, et sollicitudin urna mattis faucibus. Praesent sagittis laoreet est, et efficitur enim lacinia id. Aenean imperdiet diam nec efficitur commodo. Morbi at purus tempus tellus tempus placerat. Sed faucibus sed elit at lacinia. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent posuere orci justo, eu fermentum quam cursus quis. Proin consequat molestie magna accumsan placerat. Nulla quis consectetur tortor. Nam viverra consectetur risus iaculis ultrices.
+    a(class="about-us__phone" href="#") Tel.500 110 110
+    a(class="about-us__btn  btn" href="#") Historia Naszej firmy
+  .col-lg-6.col-lg-offset-1
+    figure.about-us__figure
+      img(class="about-us__img" src="img/about-us.jpg")
+      figcaption.about-us__caption Nasz Sklep
