--- a/src/jade/global/index.jade
+++ b/src/jade/global/index.jade
@@ -14,8 +14,14 @@ html(lang="en" class="no-js")
 
       include ../blocks/intro
 
-    include ../blocks/about-us
-    include ../blocks/asortyment
-    include ../blocks/features
+    main.page-main
+      .container
+        .row
+          include ../blocks/about-us
+
+
+
+      include ../blocks/asortyment
+      include ../blocks/features
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript")
   script(src="js/main-js.js" type="text/javascript")
