--- a/src/sass/global/global-style.scss
+++ b/src/sass/global/global-style.scss
@@ -5,6 +5,23 @@ ul {
   list-style: none;
 }
 
+h2 {
+  position: relative;
+  font-weight: 700;
+  @include mobile-primary-title-style;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -15px;
+    display: block;
+    width: 80px;
+    height: 1px;
+
+    background-color: #a0a0a0;
+  }
+}
+
 body {
   @include mobile-primary-text-style;
 }
