--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,3 +12,5 @@
 @import "blocks/burger.scss";
 @import "blocks/about-us.scss";
 @import "blocks/asortyment.scss";
+@import "blocks/page-main.scss";
+@import "blocks/btn.scss";
